--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: go_router_example
-description: go_router_example
+name: tab_router_example
+description: tab_router_example
 
 publish_to: 'none'
 
