--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,9 @@ dependencies:
   meta: ^1.7.0
   intl: ^0.17.0
   l: ^3.2.0
-  go_router: ^5.2.0
   path: ^1.8.2
+  tab_router:
+    path: packages/tab_router
 
 dev_dependencies:
   flutter_test:
