--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   intl: ^0.17.0
   l: ^3.2.0
   path: ^1.8.2
+  shared_preferences: ^2.0.15
   tab_router:
     path: packages/tab_router
 
@@ -30,6 +31,7 @@ dev_dependencies:
   build_runner: ^2.0.2
   build_test: ^2.0.0
   flutter_gen_runner: any
+  pubspec_generator: ^3.0.1
 
 flutter:
   uses-material-design: true
