--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   shared_preferences: ^2.0.15
   tab_router:
     path: packages/tab_router
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
